distribution/gke/k8s-gateway-api.tpl/routes/aggregator-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: aggregator-route  
  labels:
    gateway: external-https
spec:
  parentRefs:
  - kind: Gateway
    name: external-https
    namespace: gateway-ns  
  hostnames:
  - <host name>
  rules:  
  - matches:
    - path:
        type: PathPrefix
        value: /agri/search
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /search
    backendRefs:
    - name: master-agriagent-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /retail/search
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /search
    backendRefs:
    - name: master-retailagent-svc
      port: 80
