distribution/gke/k8s-gateway-api.tpl/routes/event-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: event-route  
  labels:
    gateway: external-https
spec:
  parentRefs:
  - kind: Gateway
    name: external-https
    namespace: gateway-ns  
  hostnames:
  - <host name>
  rules:  
  - matches:
    - path:
        type: PathPrefix
        value: /event
    - path:
        type: PathPrefix
        value: /socket.io
    backendRefs:
    - name: event-serverapp-svc
      port: 80
