distribution/gke/k8s-gateway-api.tpl/routes/smoke-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: smoke-route  
  labels:
    gateway: external-https
spec:
  parentRefs:
  - kind: Gateway
    name: external-https
    namespace: gateway-ns  
  hostnames:
  - <host name>
  rules:  
  - matches:
    - path:
        type: PathPrefix
        value: /smoke
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: apacheapp-svc
      port: 80
