distribution/gke/k8s-gateway-api.tpl/routes/streamer-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: streamer-route  
  labels:
    gateway: external-https
spec:
  parentRefs:
  - kind: Gateway
    name: external-https
    namespace: gateway-ns  
  hostnames:
  - <host name>
  rules:  
  - matches:
    - path:
        type: PathPrefix
        value: /stream
    - path:
        type: PathPrefix
        value: /socket.io
    backendRefs:
    - name: streamer-serverapp-svc
      port: 80
